--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hash-link": "^1.0.1",
+    "react-router-dom": "^5.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "sass": "^1.38.1",
     "web-vitals": "^1.1.2"
