--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://georgy-dzumenko.github.io/my-app",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -24,7 +25,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "deploy": "gh-pages-deploy",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
