--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://georgy-dzumenko.github.io/my-app",
+  "homepage": "http://georgy-dzumenko.github.io/watchlist",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
