--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hash-link": "^1.0.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.38.1",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
