--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@lottiefiles/lottie-player": "^1.4.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.7.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hash-link": "^1.0.1",
+    "react-lottie": "^1.2.3",
+    "react-lottie-segments": "^1.4.9",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
     "sass": "^1.38.1",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
