--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
+    "lottie-react-web": "^2.2.2",
     "lottie-web": "^5.7.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
