--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hash-link": "^1.0.1",
+    "react-intersection-observer": "^8.32.5",
     "react-lottie": "^1.2.3",
     "react-lottie-segments": "^1.4.9",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.2.1",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
